--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
-		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
+		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force",
+		"test": "jest --config scripts/jest/jest.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,22 +16,25 @@
 		"@commitlint/config-conventional": "^17.4.4",
 		"@rollup/plugin-alias": "^4.0.3",
 		"@rollup/plugin-commonjs": "^24.0.1",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
 		"@typescript-eslint/parser": "^5.57.0",
+		"@vitejs/plugin-react": "^3.1.0",
 		"commitlint": "^17.5.1",
 		"eslint": "^8.37.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.3",
+		"jest": "^29.5.0",
+		"jest-config": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
 		"prettier": "^2.8.7",
 		"rimraf": "^4.4.1",
 		"rollup": "^3.20.2",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.34.1",
 		"typescript": "^5.0.3",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@vitejs/plugin-react": "^3.1.0",
 		"vite": "^4.2.0"
 	},
 	"dependencies": {
