--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@rollup/plugin-commonjs": "^24.0.1",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/scheduler": "^0.16.3",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
 		"@typescript-eslint/parser": "^5.57.0",
 		"@vitejs/plugin-react": "^3.1.0",
@@ -41,6 +42,7 @@
 		"vite": "^4.2.0"
 	},
 	"dependencies": {
-		"@rollup/plugin-replace": "^5.0.2"
+		"@rollup/plugin-replace": "^5.0.2",
+		"scheduler": "^0.23.0"
 	}
 }
